@@ -4,6 +4,7 @@ import com.urise.webapp.model.*;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 
 public class ResumeTestData {
     public static void main(String[] args) {
@@ -41,86 +42,137 @@ public class ResumeTestData {
                 "администрирование Hudson/Jenkins, Ant + custom task, SoapUI, JPublisher, Flyway, Nagios, iReport, OpenCmis, Bonita, pgBouncer",
                 "Отличное знание и опыт применения концепций ООП, SOA, шаблонов проектрирования, архитектурных шаблонов, UML, функционального программирования",
                 "Родной русский, английский \"upper intermediate\"")));
-        r1.addSection(SectionType.EXPERIENCE, new OrganizationSection(Arrays.asList(
-                new Organization("Java Online Projects",
+        r1.addSection(SectionType.EXPERIENCE, new OrganisationSection(Arrays.asList(
+                new Organisation(
+                        "Java Online Projects",
                         "javaops.ru",
-                        period, LocalDate.of(2013, 10, 1),
-                        LocalDate.now(),
-                        "Автор проекта.",
-                        "Создание, организация и проведение Java онлайн проектов и стажировок."),
-                new Organization("Wrike",
+                        List.of(
+                                new Period(LocalDate.of(2013, 10, 1),
+                                        LocalDate.now(),
+                                        "Автор проекта.",
+                                        "Создание, организация и проведение Java онлайн проектов и стажировок.")
+                        )),
+                new Organisation(
+                        "Wrike",
                         "wrike.com",
-                        period, LocalDate.of(2014, 10, 1),
-                        LocalDate.of(2016, 1, 1),
-                        "Старший разработчик (backend)",
-                        "Проектирование и разработка онлайн платформы управления проектами Wrike (Java 8 API, Maven, Spring, MyBatis, Guava, Vaadin, PostgreSQL, Redis). Двухфакторная аутентификация, авторизация по OAuth1, OAuth2, JWT SSO."),
-                new Organization("RIT Center",
+                        List.of(
+                                new Period(LocalDate.of(2014, 10, 1),
+                                        LocalDate.of(2016, 1, 1),
+                                        "Старший разработчик (backend)",
+                                        "Проектирование и разработка онлайн платформы управления проектами Wrike (Java 8 API, Maven, Spring, MyBatis, Guava, Vaadin, PostgreSQL, Redis). Двухфакторная аутентификация, авторизация по OAuth1, OAuth2, JWT SSO.")
+                        )),
+                new Organisation(
+                        "RIT Center",
                         "",
-                        period, LocalDate.of(2012, 4, 1),
-                        LocalDate.of(2014, 10, 1),
-                        "Java архитектор",
-                        "Организация процесса разработки системы ERP для разных окружений: релизная политика, версионирование, ведение CI (Jenkins), миграция базы (кастомизация Flyway), конфигурирование системы (pgBoucer, Nginx), AAA via SSO. Архитектура БД и серверной части системы. Разработка интергационных сервисов: CMIS, BPMN2, 1C (WebServices), сервисов общего назначения (почта, экспорт в pdf, doc, html). Интеграция Alfresco JLAN для online редактирование из браузера документов MS Office. Maven + plugin development, Ant, Apache Commons, Spring security, Spring MVC, Tomcat,WSO2, xcmis, OpenCmis, Bonita, Python scripting, Unix shell remote scripting via ssh tunnels, PL/Python"),
-                new Organization("Luxoft (Deutsche Bank)",
+                        List.of(
+                                new Period(LocalDate.of(2012, 4, 1),
+                                        LocalDate.of(2014, 10, 1),
+                                        "Java архитектор",
+                                        "Организация процесса разработки системы ERP для разных окружений: релизная политика, версионирование, ведение CI (Jenkins), миграция базы (кастомизация Flyway), конфигурирование системы (pgBoucer, Nginx), AAA via SSO. Архитектура БД и серверной части системы. Разработка интергационных сервисов: CMIS, BPMN2, 1C (WebServices), сервисов общего назначения (почта, экспорт в pdf, doc, html). Интеграция Alfresco JLAN для online редактирование из браузера документов MS Office. Maven + plugin development, Ant, Apache Commons, Spring security, Spring MVC, Tomcat,WSO2, xcmis, OpenCmis, Bonita, Python scripting, Unix shell remote scripting via ssh tunnels, PL/Python")
+                        )),
+                new Organisation(
+                        "Luxoft (Deutsche Bank)",
                         "luxoft.ru",
-                        period, LocalDate.of(2010, 12, 1),
-                        LocalDate.of(2012, 4, 1),
-                        "Ведущий программист",
-                        "Участие в проекте Deutsche Bank CRM (WebLogic, Hibernate, Spring, Spring MVC, SmartGWT, GWT, Jasper, Oracle). Реализация клиентской и серверной части CRM. Реализация RIA-приложения для администрирования, мониторинга и анализа результатов в области алгоритмического трейдинга. JPA, Spring, Spring-MVC, GWT, ExtGWT (GXT), Highstock, Commet, HTML5."),
-                new Organization("Yota",
+                        List.of(
+                                new Period(LocalDate.of(2010, 12, 1),
+                                        LocalDate.of(2012, 4, 1),
+                                        "Ведущий программист",
+                                        "Участие в проекте Deutsche Bank CRM (WebLogic, Hibernate, Spring, Spring MVC, SmartGWT, GWT, Jasper, Oracle). Реализация клиентской и серверной части CRM. Реализация RIA-приложения для администрирования, мониторинга и анализа результатов в области алгоритмического трейдинга. JPA, Spring, Spring-MVC, GWT, ExtGWT (GXT), Highstock, Commet, HTML5.")
+                        )),
+                new Organisation(
+                        "Yota",
                         "yota.ru",
-                        period, LocalDate.of(2008, 6, 1),
-                        LocalDate.of(2010, 12, 1),
-                        "Ведущий специалист",
-                        "Дизайн и имплементация Java EE фреймворка для отдела \"Платежные Системы\" (GlassFish v2.1, v3, OC4J, EJB3, JAX-WS RI 2.1, Servlet 2.4, JSP, JMX, JMS, Maven2). Реализация администрирования, статистики и мониторинга фреймворка. Разработка online JMX клиента (Python/ Jython, Django, ExtJS)"),
-                new Organization("Enkata",
+                        List.of(
+                                new Period(LocalDate.of(2008, 6, 1),
+                                        LocalDate.of(2010, 12, 1),
+                                        "Ведущий специалист",
+                                        "Дизайн и имплементация Java EE фреймворка для отдела \"Платежные Системы\" (GlassFish v2.1, v3, OC4J, EJB3, JAX-WS RI 2.1, Servlet 2.4, JSP, JMX, JMS, Maven2). Реализация администрирования, статистики и мониторинга фреймворка. Разработка online JMX клиента (Python/ Jython, Django, ExtJS)")
+                        )),
+                new Organisation(
+                        "Enkata",
                         "enkata.com",
-                        period, LocalDate.of(2007, 3, 1),
-                        LocalDate.of(2008, 6, 1),
-                        "Разработчик ПО",
-                        "Реализация клиентской (Eclipse RCP) и серверной (JBoss 4.2, Hibernate 3.0, Tomcat, JMS) частей кластерного J2EE приложения (OLAP, Data mining)."),
-                new Organization("Siemens AG",
+                        List.of(
+                                new Period(LocalDate.of(2007, 3, 1),
+                                        LocalDate.of(2008, 6, 1),
+                                        "Разработчик ПО",
+                                        "Реализация клиентской (Eclipse RCP) и серверной (JBoss 4.2, Hibernate 3.0, Tomcat, JMS) частей кластерного J2EE приложения (OLAP, Data mining).")
+                        )),
+                new Organisation(
+                        "Siemens AG",
                         "siemens.com",
-                        period, LocalDate.of(2005, 1, 1),
-                        LocalDate.of(2007, 2, 1),
-                        "Разработчик ПО",
-                        "Разработка информационной модели, проектирование интерфейсов, реализация и отладка ПО на мобильной IN платформе Siemens @vantage (Java, Unix)."),
-                new Organization("Alcatel",
+                        List.of(
+                                new Period(LocalDate.of(2005, 1, 1),
+                                        LocalDate.of(2007, 2, 1),
+                                        "Разработчик ПО",
+                                        "Разработка информационной модели, проектирование интерфейсов, реализация и отладка ПО на мобильной IN платформе Siemens @vantage (Java, Unix).")
+                        )),
+                new Organisation(
+                        "Alcatel",
                         "alcatel.ru",
-                        period, LocalDate.of(1997, 9, 1),
-                        LocalDate.of(2005, 1, 1),
-                        "Инженер по аппаратному и программному тестированию",
-                        "Тестирование, отладка, внедрение ПО цифровой телефонной станции Alcatel 1000 S12 (CHILL, ASM)."))));
-        r1.addSection(SectionType.EDUCATION, new OrganizationSection(Arrays.asList(
-                new Organization("Coursera",
+                        List.of(new Period(LocalDate.of(1997, 9, 1),
+                                LocalDate.of(2005, 1, 1),
+                                "Инженер по аппаратному и программному тестированию",
+                                "Тестирование, отладка, внедрение ПО цифровой телефонной станции Alcatel 1000 S12 (CHILL, ASM).")
+                        )))));
+        r1.addSection(SectionType.EDUCATION, new OrganisationSection(Arrays.asList(
+                new Organisation(
+                        "Coursera",
                         "coursera.org",
-                        period, LocalDate.of(2013, 3, 1),
-                        LocalDate.of(2013, 5, 1),
-                        "Functional Programming Principles in Scala' by Martin Odersky",
-                        ""),
-                new Organization("Luxoft",
+                        List.of(new Period(LocalDate.of(2013, 3, 1),
+                                LocalDate.of(2013, 5, 1),
+                                "Functional Programming Principles in Scala' by Martin Odersky",
+                                "")
+                        )),
+                new Organisation(
+                        "Luxoft",
                         "luxoft.ru",
-                        period, LocalDate.of(2011, 3, 1),
-                        LocalDate.of(2011, 4, 1),
-                        "Курс 'Объектно-ориентированный анализ ИС. Концептуальное моделирование на UML.'",
-                        ""),
-                new Organization("Siemens AG",
+                        List.of(
+                                new Period(LocalDate.of(2011, 3, 1),
+                                        LocalDate.of(2011, 4, 1),
+                                        "Курс 'Объектно-ориентированный анализ ИС. Концептуальное моделирование на UML.'",
+                                        "")
+                        )),
+                new Organisation(
+                        "Siemens AG",
                         "siemens.com",
-                        period, LocalDate.of(2005, 1, 1),
-                        LocalDate.of(2005, 4, 1),
-                        "3 месяца обучения мобильным IN сетям (Берлин)",
-                        ""),
-                new Organization("Alcatel",
+                        List.of(
+                                new Period(LocalDate.of(2005, 1, 1),
+                                        LocalDate.of(2005, 4, 1),
+                                        "3 месяца обучения мобильным IN сетям (Берлин)",
+                                        "")
+                        )),
+                new Organisation(
+                        "Alcatel",
                         "alcatel.ru",
-                        period, LocalDate.of(1997, 9, 1),
-                        LocalDate.of(1998, 3, 1),
-                        "6 месяцев обучения цифровым телефонным сетям (Москва)",
-                        ""),
-                new Organization("Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики",
+                        List.of(
+                                new Period(LocalDate.of(1997, 9, 1),
+                                        LocalDate.of(1998, 3, 1),
+                                        "6 месяцев обучения цифровым телефонным сетям (Москва)",
+                                        "")
+                        )),
+                new Organisation(
+                        "Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики",
                         "itmo.ru",
-                        period, LocalDate.of(1993, 9, 1),
-                        LocalDate.of(1996, 7, 1),
-                        "Аспирантура (программист С, С++)",
-                        ""))));
+                        List.of(
+                                new Period(LocalDate.of(1993, 9, 1),
+                                        LocalDate.of(1996, 7, 1),
+                                        "Аспирантура (программист С, С++)",
+                                        ""),
+                                new Period(LocalDate.of(1987, 9, 1),
+                                        LocalDate.of(1993, 7, 1),
+                                        "Инженер (программист Fortran, C)",
+                                        "")
+                        )),
+                new Organisation(
+                        "Заочная физико-техническая школа при МФТИ",
+                        "mipt.ru",
+                        List.of(
+                                new Period(LocalDate.of(1984, 9, 1),
+                                        LocalDate.of(1987, 6, 1),
+                                        "Закончил с отличием",
+                                        "")
+                        ))
+        )));
         System.out.println("Вывод данный по резюме: " + r1.getUuid());
         System.out.println(r1.getFullName());
 
